<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Administrador.Agregar_Trabajador">

    <!-- Toolbar -->
    <RelativeLayout
        android:id="@+id/toolbarRLAgregarT"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_toolbar_height">

        <ImageButton
            android:id="@+id/Ib_regresar"
            android:src="@drawable/ic_regresar"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/Txt_agregar_Trabajador"
            android:textAllCaps="true"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_alignParentBottom="true"
            android:background="#ccc"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
    </RelativeLayout>

    <!-- Formulario para agregar trabajador -->
    <ScrollView
        android:layout_below="@id/toolbarRLAgregarT"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="1dp"
            android:showDividers="middle">

            <!-- Sección 1: Información Personal -->
            <TextView
                android:text="Información Personal"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_dni"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:hint="@string/nro_dni_Trabajador"
                        android:inputType="number" />

                    <Button
                        android:id="@+id/btn_buscarDni"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Buscar"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="8dp" />
                </LinearLayout>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nombres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombres" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_primer_apellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/primer_apellido" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_segundo_apellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/segundo_apellido" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Sección 2: Información Adicional -->
            <TextView
                android:text="Información Adicional"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="8dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nacimiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Et_nacimiento"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_genero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/genero" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_estado_civil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/estado_civil" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_estado_profesional"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/estado_profesional" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Sección 3: Información de Contacto -->
            <TextView
                android:text="CUENTA DE TRABAJADOR "
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="8dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/correo"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/passwordT"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Botón para crear cuenta -->
            <Button
                android:id="@+id/btn_crear_cuenta"
                android:text="@string/crear_cuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>